prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/type_differs.nut
// EXPECT_ERROR: "differs from the declared type"
local x: int = "not a number"
